@@ -1,7 +1,5 @@
 package ee.tuleva.onboarding.comparisons.fundvalue.persistence;
 
-import static java.util.stream.Collectors.toList;
-
 import ee.tuleva.onboarding.comparisons.fundvalue.FundValue;
 import ee.tuleva.onboarding.comparisons.fundvalue.FundValueProvider;
 import java.sql.ResultSet;
@@ -20,47 +18,67 @@ public class JdbcFundValueRepository implements FundValueRepository, FundValuePr
   private final NamedParameterJdbcTemplate jdbcTemplate;
 
   private static final String FIND_LAST_VALUE_QUERY =
-      ""
-          + "SELECT * "
-          + "FROM index_values "
-          + "WHERE key = :key "
-          + "ORDER BY date DESC NULLS LAST "
-          + "LIMIT 1";
+      """
+      SELECT *
+      FROM index_values
+      WHERE key = :key
+      ORDER BY date DESC NULLS LAST
+      LIMIT 1
+      """;
 
   private static final String FIND_LATEST_VALUE_QUERY =
-      ""
-          + "SELECT * "
-          + "FROM index_values "
-          + "WHERE key = :key AND date <= :date "
-          + "ORDER BY date DESC "
-          + "LIMIT 1";
+      """
+      SELECT *
+      FROM index_values
+      WHERE key = :key AND date <= :date
+      ORDER BY date DESC
+      LIMIT 1
+      """;
 
   private static final String FIND_FUND_VALUE_QUERY =
-      "" + "SELECT * " + "FROM index_values " + "WHERE key = :key AND date = :date " + "LIMIT 1";
+      """
+      SELECT *
+      FROM index_values
+      WHERE key = :key AND date = :date
+      LIMIT 1
+      """;
 
   private static final String INSERT_VALUES_QUERY =
-      "" + "INSERT INTO index_values (key, date, value) " + "VALUES (:key, :date, :value)";
+      """
+      INSERT INTO index_values (key, date, value)
+      VALUES (:key, :date, :value)
+      """;
 
   private static final String UPDATE_VALUES_QUERY =
-      "" + "UPDATE index_values SET value = :value " + "WHERE key = :key AND date = :date";
+      """
+      UPDATE index_values SET value = :value
+      WHERE key = :key AND date = :date
+      """;
 
   private static final String SELECT_GLOBAL_STOCK_VALUES_QUERY =
-      ""
-          + "SELECT * "
-          + "FROM ( "
-          + "(SELECT * FROM index_values WHERE key='MARKET' and date <= '2019-12-31' ORDER BY date DESC) "
-          + "UNION "
-          + "(SELECT * FROM index_values WHERE key='GLOBAL_STOCK_INDEX' and date >='2020-01-01') "
-          + ") v ORDER BY v.date ASC";
+      """
+      SELECT *
+      FROM (
+      (SELECT * FROM index_values WHERE key='MARKET' and date <= '2019-12-31' ORDER BY date DESC)
+      UNION
+      (SELECT * FROM index_values WHERE key='GLOBAL_STOCK_INDEX' and date >='2020-01-01')
+      ) v ORDER BY v.date ASC
+      """;
 
   private static final String FIND_EARLIEST_DATES_QUERY =
-      "SELECT key, MIN(date) AS earliest_date " + "FROM index_values " + "GROUP BY key";
+      """
+      SELECT key, MIN(date) AS earliest_date
+      FROM index_values
+      GROUP BY key
+      """;
 
   private static final String FIND_EARLIEST_DATE_FOR_KEY_QUERY =
-      "SELECT key, MIN(date) AS earliest_date "
-          + "FROM index_values "
-          + "WHERE key = :key "
-          + "GROUP BY key";
+      """
+      SELECT key, MIN(date) AS earliest_date
+      FROM index_values
+      WHERE key = :key
+      GROUP BY key
+      """;
 
   @Override
   public Optional<LocalDate> findEarliestDateForKey(String key) {
@@ -128,7 +146,7 @@ public class JdbcFundValueRepository implements FundValueRepository, FundValuePr
                         "key", (Object) fundValue.getComparisonFund(),
                         "date", fundValue.getDate(),
                         "value", fundValue.getValue()))
-            .collect(toList());
+            .toList();
     jdbcTemplate.batchUpdate(INSERT_VALUES_QUERY, batchValues.toArray(new Map[fundValues.size()]));
   }
 
